[gd_scene load_steps=4 format=3 uid="uid://ctmqv0pom8cab"]

[ext_resource type="Texture2D" uid="uid://ctdtusc77uxbv" path="res://graphics/player/player.png" id="1_asf5q"]
[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_v62o5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l2vqa"]
radius = 69.0072

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_v62o5")

[node name="PlayerImage" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1_asf5q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-32, -1)
shape = SubResource("CircleShape2D_l2vqa")

[node name="LaserCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(95, 19)
rotation = 0.000336459

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(89, 10)
rotation = 0.000336459

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(89, 30)
rotation = 0.000336459

[connection signal="timeout" from="LaserCooldown" to="." method="_on_laser_cooldown_timeout"]
[connection signal="timeout" from="GrenadeCooldown" to="." method="_on_grenade_cooldown_timeout"]
